# recipes

./: db.sqlite3  pyproject.toml  requirements.txt
recipe_box/: forms.py  models.py  settings.py  urls.py  views.py
recipe_box/migrations/: 0001_initial.py  0002_auto_20200204_0139.py  0003_auto_20200204_0139.py  0004_auto_20200204_0139.py
recipe_box/templates/: addauthors.html  addrecipes.html  author.html  details.html  index.html  login.html  recipe_details.html  signup.html
